<resources>
    <string name="app_name">张检公益</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="str_login_or_register">登录/注册</string>
    <string name="str_report_record">举报记录</string>
    <string name="str_prize_record">获奖记录</string>
    <string name="str_my_collect">我的收藏</string>
    <string name="str_settings">设置</string>
    <string name="str_user_auth_error">您的账号已在其他设备登录，用户权限失效。请重新登录？</string>
    <string name="str_cancel">取消</string>
    <string name="str_login">登录</string>
    <string name="str_loading">加载中</string>
    <string name="str_input_phone">请输入手机号</string>
    <string name="str_input_password">请输入密码</string>
    <string name="str_new_user">新用户</string>
    <string name="str_forgetpwd_extend">忘记密码?</string>
    <string name="str_setting">设置</string>
    <string name="str_app_version">软件版本(点击检查更新)</string>
    <string name="str_exit_login">退出登录</string>
    <string name="str_app_cache">应用缓存(点击清空)</string>

    <string name="title_activity_index">IndexActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_register">注册</string>
    <string name="str_input_verifycode">请输入验证码</string>
    <string name="str_send_verify">发送验证码</string>
    <string name="str_user_protocol">《用户使用协议》</string>
    <string name="str_agree">同意</string>
    <string name="str_reset_pwd">重置密码</string>
    <string name="str_submit">提交</string>
    <string name="str_save_draft">保存草稿</string>
    <string name="str_enter_submit">确定提交</string>
    <string name="str_required_bracket">(必填)</string>
    <string name="str_not_required_bracket">(非必填)</string>
    <string name="str_pass_location">发生地点:</string>
    <string name="str_pass_title">反映标题:</string>
    <string name="str_people_pass">线索举报</string>
    <string name="str_pass_images">现场实景图片(最多9张):</string>
    <string name="str_pass_voice">语音留言(最多10分钟):</string>
    <string name="str_click_start_speak">点击开始录制</string>
    <string name="str_pass_question_desc">详细内容(问题描述)</string>
    <string name="str_total_time">总:10分钟</string>
    <string name="str_residue_time">剩余:%1$d分%2$d秒</string>
    <string name="str_stop_record">停止录制</string>
    <string name="str_record_hints">(录制完成点击播放，长按清除)</string>
    <string name="str_law">法律法规</string>
    <string name="str_case">民行工作</string>
    <string name="str_public">公益诉讼</string>
    <string name="str_news">------ 经典案例 ------</string>
    <string name="str_input_place">请输入地点自动检索</string>
    <string name="str_pass_record">投诉记录</string>
    <string name="str_no_record">暂无记录</string>
    <string name="str_edit">编辑</string>
    <string name="str_delete">删除</string>
    <string name="str_no_address">无地址信息</string>
    <string name="str_pass_edit">举报草稿编辑</string>
    <string name="str_pass_preview">投诉详情</string>
    <string name="str_online_pass">在线举报</string>
    <string name="str_material_pass">资料举报</string>
    <string name="str_version_desc">版本说明</string>
    <string name="str_app_download">APP下载二维码</string>
    <string name="str_imei">IMEI</string>
    <string name="str_last_name">姓氏</string>
    <string name="str_gentle">先生</string>
    <string name="str_lady">女士</string>
    <string name="str_modify_pwd">修改密码</string>
    <string name="str_reply">相关回复</string>
    <string name="str_publishtime">发布时间:</string>
</resources>
